--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,24 @@ h1 {
     color: white;
 }
 
+.system {
+    position: relative;
+    z-index: 1; 
+    color: #f5f5f5; 
+}
+
+.system::after {
+    content: "";
+    position: absolute;
+    left: -5px;
+    right: -5px;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 11px; 
+    background-color:#33aaff; 
+    z-index: -1;
+}
+
 body {
     background-color: black;
     color: white; 
