--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+
 }
 
 h1 {
@@ -75,11 +76,16 @@ nav a {
 .btn {
     background-color: #007bff;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 .btn:hover {
     background-color: #0056b3;
+}
+.wrapper {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 20px; /* Adds some space on small screens */
 }
 
 .hero {
@@ -90,6 +96,12 @@ nav a {
     justify-content: center;
     align-items: center;
     text-shadow: 2px 2px 5px black;
+    transform: scale(1);
+    transition: transform 10s ease-in-out;
+}
+
+.hero {
+    transform: scale(1.05); 
 }
 
 .hero h2 {
@@ -99,6 +111,11 @@ nav a {
 .solar-text {
     color: #58C4DD;
     font-weight: bold;
+    transition: color 5s ease;
+}
+
+.solar-text {
+    color: #a761d5;
 }
 
 .planets {
@@ -113,7 +130,7 @@ section {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(115px, 1fr));
     gap: 20px;
     max-width: 800px;
     margin: 0 auto;
@@ -145,18 +162,25 @@ section {
 }
 
 .learn-more {
-    background: purple;
+    background-color: purple;
     color: white;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 3px 8px; 
+    font-size: 12px; 
+    border: none;
+    border-radius: 4px;
+    margin-top: 5px;
+    cursor: pointer;
     display: inline-block;
-    margin-top: 10px;
     text-decoration: none;
+    transition: background-color 0.3s ease;
 }
 
+.learn-more:hover {
+    background-color: rgb(62, 71, 203);
+}
 @media (max-width: 900px) {
     .grid {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(5, 1fr);
     }
 }
 
