--- a/css/styles.css
+++ b/css/styles.css
@@ -98,10 +98,12 @@ nav a {
     text-shadow: 2px 2px 5px black;
     transform: scale(1);
     transition: transform 10s ease-in-out;
-}
+    box-shadow: 0 0 15px 3px rgba(255, 165, 0, 0.4); 
+    }
+    
 
 .hero {
-    transform: scale(1.05); 
+    transform: scale(1.09); 
 }
 
 .hero h2 {
